--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,25 @@
 {
   "rewrites": [
-    { "source": "/", "destination": "/quiz1" }
-  ],
-  "cleanUrls": true,
-  "trailingSlash": false
+    {
+      "source": "/quiz1",
+      "destination": "/quiz1/index.html"
+    },
+    {
+      "source": "/quiz1/profile",
+      "destination": "/quiz1/profile/index.html"
+    },
+    {
+      "source": "/quiz1/hometown",
+      "destination": "/quiz1/hometown/index.html"
+    },
+    {
+      "source": "/quiz1/food",
+      "destination": "/quiz1/food/index.html"
+    },
+    {
+      "source": "/quiz1/tourist",
+      "destination": "/quiz1/tourist/index.html"
+    }
+  ]
 }
+
