--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,10 @@
 {
-  "rewrites": [
+  "cleanUrls": true,
+  "redirects": [
     {
-      "source": "/quiz1",
-      "destination": "/quiz1/index.html"
-    },
-    {
-      "source": "/quiz1/profile",
-      "destination": "/quiz1/profile/index.html"
-    },
-    {
-      "source": "/quiz1/hometown",
-      "destination": "/quiz1/hometown/index.html"
-    },
-    {
-      "source": "/quiz1/food",
-      "destination": "/quiz1/food/index.html"
-    },
-    {
-      "source": "/quiz1/tourist",
-      "destination": "/quiz1/tourist/index.html"
+      "source": "/",
+      "destination": "/quiz1",
+      "permanent": true
     }
   ]
 }
-
